<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearVertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".MainActivity"
    >

    <EditText
        android:id="@+id/To"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"
        android:inputType="textPersonName"
        android:autofillHints="" tools:targetApi="o" />

    <EditText
        android:id="@+id/Subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/subject"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:gravity="top"
        android:hint="@string/message"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <Button
        android:id="@+id/Send"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/send" />

    <Button
        android:id="@+id/Toast"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/toast" />
</LinearLayout>

