<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLayout" >

    <TableRow
        android:paddingTop="10dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:textColor="#890000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/login" />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:text="@string/username2"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginStart="20dp"
            />

        <EditText
            android:id="@+id/screenName"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginStart="20dp"
            android:text="@string/password2" />

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_span="2"
            android:textColor="#fff"
            android:text="@string/submit"
            android:focusable="true" />
    </TableRow>
</TableLayout>