<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".RelativeLayout">


    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reminder"
        android:inputType="textPersonName"
        android:autofillHints="" tools:targetApi="o" />

    <Spinner
        android:id="@+id/dates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Name"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/times"
        />

    <Spinner
        android:id="@+id/times"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Name"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/times"
        android:layout_alignParentEnd="true"
        android:text="@string/btnRelative" />

    <TextView
        android:id="@+id/kepada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initextview"
        android:textSize="20dp"
        android:layout_below="@+id/button"
        />


</RelativeLayout>